@@ -1,6 +1,7 @@
 3.0rc5
 	Pointer to DRAC documentation (Matthias Scheler)
 	FreeBSD build fixes (Hajimu UMEMOTO)
+	Remove the /tmp/access-list.debug for security sake (AIDA Shinra)
 3.0rc4
 	Updated the list of broken MTA
 	Fix MX sync between Tru64 and Linux (Attila Bruncsak)
